istio-local-service-mesh/applications/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: task-tracker-app-ui
spec:
  rules:
  - host: servicemesh.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-tracker-app-ui
            port: 
              number: 80
