istio-local-service-mesh/applications/kustomize/base/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: task-tracker-app
  namespace: trask-tracker-app
  labels:
    app: task-tracker-app
spec:
  gateways:
  - istio-system/default-gateway #--Refer to the default gateway by it's FQDN
  hosts:
  - task-tracker-app.local #--Virtual Service Hostname
  http:
  - name: primary
    route:
    - destination:
        host: task-tracker-app
        port:
          number: 80
      weight: 100

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
     - "*"
